fixed a bug where z-index of a h3 was interfering with z-index of the nav bar

--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@ h2, h3, p {
     color: var(--text-color);
     margin: 10px;
     display: flex;
-    z-index: 1;
 }
 
 
